--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
           <a href="#"  style="--i:1;"
           class="active">Home</a>
-          <a href="#" style="--i:2;">About</a>
+          <a href="#" style="--i:2;">Test</a>
           <a href="#" style="--i:3;">Skills</a>
           <a href="#" style="--i:4;">Portfolio</a>
           <a href="#" style="--i:5;">Contact</a>
