--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -14,10 +14,13 @@
     <header class="header">
         <a href="#" class="logo">Portfolio.</a>
 
+        <label for="nav-toggle"><i class='bx bx-menu'></i></label>
+        <input type="checkbox" id="nav-toggle">
+        
         <nav class="navbar">
           <a href="#"  style="--i:1;"
           class="active">Home</a>
-          <a href="#" style="--i:2;">Test</a>
+          <a href="#" style="--i:2;">About</a>
           <a href="#" style="--i:3;">Skills</a>
           <a href="#" style="--i:4;">Portfolio</a>
           <a href="#" style="--i:5;">Contact</a>
