--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -33,7 +33,7 @@
       <div class="home-content">
         <h1>Hi, I'm Jerwin</h1>
         <h3>Front-End Developer</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ea vitae eveniet architecto aperiam. Obcaecati perferendis corporis similique vitae reiciendis.</p>
+        <p>Welcome to my portfolio website! I am an aspiring front-end developer passionate about crafting visually stunning websites using HTML and CSS. Explore my projects and witness my dedication to creating engaging user experiences. Let's build something amazing together!</p>
         <a href="" class="btn">Hire Me</a>
       </div>
 
