--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="logo">Portfolio.</a>
         
         <nav class="navbar">
-          <a href="#"  style="--i:1;"
+          <a href="index.html"  style="--i:1;"
           class="active">Home</a>
           <a href="#" style="--i:2;">About</a>
           <a href="#" style="--i:3;">Skills</a>
