--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -26,7 +26,7 @@
 
     <section class="home">
       <div class="home-sci">
-        <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+        <a href="https://www.facebook.com/jerwin.maguyon/"><i class='bx bxl-facebook-circle'></i></a>
         <a href="#"><i class='bx bxl-instagram' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
       </div>
