--- a/porfolio/about.html
+++ b/porfolio/about.html
@@ -15,6 +15,8 @@
     box-sizing: border-box;
     padding: 0;
   }
+
+  
   </style>
 </head>
 
@@ -107,5 +109,13 @@
 
     </div>
   </div>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', function() {
+      var aboutContainer = document.querySelector('.about_container');
+      aboutContainer.classList.add('show');
+    });
+  </script>
+  
 </body>
 </html>
