--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 <body>
     <!-- #region NavBar --> 
@@ -42,11 +43,13 @@
       </div>
       
       <div class="home-content">
-        <h1>Hi, I'm Jerwin</h1>
-        <h3>Front-End Developer</h3>
+        <h3>Hi, It's Me</h3>
+        <h1>Jerwin Maguyon</h1>
+        <h3>And I'm a <span class="text"></span></h3>
         <p>Welcome to my portfolio website! I am an aspiring front-end developer passionate about crafting visually stunning websites using HTML and CSS. I'm confident that I can bring your website to life. Let's build something amazing together!</p>
         <a href="#" class="btn">Hire Me</a>
       </div>
+
       <!-- #endregion Content --> 
       
       <div class="home-img">
@@ -61,5 +64,8 @@
         </div>
       </div>
     </section>
+
+    <script src="./main.js"></script>
+
 </body>
 </html>
