--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -26,7 +26,7 @@
           <a href="index.html"  style="--i:1;"
           class="active">Home</a>
           <a href="about.html" style="--i:2;">About</a>
-          <a href="#" style="--i:3;">Skills</a>
+          <a href="skills.html" style="--i:3;">Skills</a>
           <a href="#" style="--i:4;">Portfolio</a>
           <a href="#" style="--i:5;">Contact</a>
         </nav>
